# mangos-classic

./: .gitignore  CMakeLists.txt
dep/boost/: CMakeLists.txt
src/: CMakeLists.txt
src/authserver/: AuthSocket.cpp  CMakeLists.txt  Main.cpp  authserver.conf.dist.in  authserver.rc  run-authserver
src/game/Chat/: Chat.cpp  Chat.h  Level2.cpp  debugcmds.cpp
src/game/Entities/: Player.cpp  Player.h  Unit.cpp  Unit.h
src/game/GMTickets/: GMTicketHandler.cpp
src/game/LFG/: LFGQueue.h
src/game/MotionGenerators/: MovementHandler.cpp
src/game/Server/: Opcodes.cpp  Opcodes.h  WorldPacket.h  WorldSession.cpp  WorldSocket.cpp
src/game/Spells/: SpellEffects.cpp
src/game/Tools/: Language.h
src/game/World/: World.cpp
src/genrev/: CMakeLists.txt
src/mangosd/: CMakeLists.txt  Master.cpp
src/modules/PlayerBots/: .gitignore  CMakeLists.txt
src/modules/PlayerBots/ahbot/: AhBotConfig.h  Category.cpp  Category.h  ItemBag.cpp  PricingStrategy.h  TradeCategory.cpp
src/modules/PlayerBots/playerbot/: LootObjectStack.cpp  LootObjectStack.h  PlayerbotAIBase.h  PlayerbotAIConfig.cpp  PlayerbotAIConfig.h  PlayerbotCommandServer.cpp  PlayerbotCommandServer.h  PlayerbotDbStore.cpp  PlayerbotFactory.h  PlayerbotMgr.h  PlayerbotSecurity.cpp  PlayerbotSecurity.h  PlayerbotTextMgr.h  RandomItemMgr.cpp  RandomPlayerbotFactory.cpp  RandomPlayerbotFactory.h  RandomPlayerbotMgr.h  ServerFacade.h  playerbot.h
src/modules/PlayerBots/playerbot/strategy/: CustomStrategy.cpp  CustomStrategy.h  Event.h  ItemVisitors.h  PassiveMultiplier.cpp  Queue.h  StrategyContext.h  Trigger.cpp
src/modules/PlayerBots/playerbot/strategy/actions/: AcceptQuestAction.cpp  AttackAction.h  BankAction.cpp  CheckValuesAction.cpp  ChooseTargetActions.h  CustomStrategyEditAction.cpp  DebugAction.cpp  DebugAction.h  DelayAction.h  EmoteAction.cpp  EquipAction.cpp  FlagAction.h  FollowActions.cpp  FollowActions.h  GenericSpellActions.cpp  GoAction.h  GossipHelloAction.cpp  GreetAction.cpp  GuildManagementActions.h  InventoryChangeFailureAction.cpp  InventoryChangeFailureAction.h  LfgActions.cpp  ListSpellsAction.h  LootAction.cpp  LootRollAction.cpp  LootStrategyAction.cpp  LootStrategyAction.h  MailAction.cpp  MoveToRpgTargetAction.cpp  MovementActions.cpp  OutfitAction.cpp  PositionAction.cpp  QueryItemUsageAction.cpp  QueryItemUsageAction.h  QueryQuestAction.cpp  QuestAction.cpp  QuestAction.h  ReachTargetActions.h  ReadyCheckAction.h  RememberTaxiAction.cpp  (+24 more)
src/modules/PlayerBots/playerbot/strategy/druid/: DruidActions.h  DruidAiObjectContext.cpp
src/modules/PlayerBots/playerbot/strategy/generic/: CastTimeStrategy.cpp  ChatCommandHandlerStrategy.cpp  CombatStrategy.cpp  ConserveManaStrategy.cpp  DpsAssistStrategy.h  LootNonCombatStrategy.cpp  NonCombatStrategy.h  RunawayStrategy.cpp  WorldPacketHandlerStrategy.cpp
src/modules/PlayerBots/playerbot/strategy/hunter/: HunterActions.h  HunterTriggers.cpp  HunterTriggers.h
src/modules/PlayerBots/playerbot/strategy/mage/: FrostMageStrategy.cpp  MageActions.h  MageTriggers.h
src/modules/PlayerBots/playerbot/strategy/paladin/: PaladinActions.h  PaladinAiObjectContext.cpp  PaladinTriggers.cpp
src/modules/PlayerBots/playerbot/strategy/priest/: PriestAiObjectContext.cpp  PriestTriggers.h
src/modules/PlayerBots/playerbot/strategy/rogue/: RogueTriggers.h
src/modules/PlayerBots/playerbot/strategy/triggers/: CureTriggers.h  LootTriggers.cpp  RpgTriggers.cpp
src/modules/PlayerBots/playerbot/strategy/values/: ActiveSpellValue.h  AoeHealValues.cpp  AoeHealValues.h  AoeValues.cpp  AttackerCountValues.cpp  AttackerWithoutAuraTargetValue.h  AvailableLootValue.h  CcTargetValue.h  ChatValue.h  CollisionValue.cpp  CollisionValue.h  CurrentCcTargetValue.h  CurrentTargetValue.cpp  CurrentTargetValue.h  DistanceValue.h  DpsTargetValue.cpp  DpsTargetValue.h  DuelTargetValue.h  EnemyHealerTargetValue.cpp  EnemyHealerTargetValue.h  EnemyPlayerValue.h  Formations.cpp  GrindTargetValue.h  InvalidTargetValue.cpp  IsMovingValue.h  ItemCountValue.h  LastSpellCastValue.h  LeastHpTargetValue.cpp  LineTargetValue.h  LogLevelValue.h  LootStrategyValue.h  ManaSaveLevelValue.h  MasterTargetValue.h  NearestAdsValue.h  NearestCorpsesValue.cpp  NearestCorpsesValue.h  NearestFriendlyPlayersValue.cpp  NearestGameObjects.cpp  NearestGameObjects.h  NearestNonBotPlayersValue.cpp  (+24 more)
src/modules/PlayerBots/playerbot/strategy/warlock/: WarlockActions.cpp  WarlockTriggers.cpp
src/modules/PlayerBots/playerbot/strategy/warrior/: WarriorActions.h  WarriorTriggers.cpp
src/modules/PlayerBots_backup/ahbot/: AhBot.cpp  AhBot.h  AhBotConfig.cpp  ConsumableCategory.h  PricingStrategy.cpp  TradeCategory.h
src/modules/PlayerBots_backup/playerbot/: AiFactory.cpp  AiFactory.h  ChatFilter.cpp  ChatHelper.cpp  ChatHelper.h  FleeManager.cpp  FleeManager.h  Helpers.cpp  Helpers.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PlayerbotAI.cpp  PlayerbotAIBase.cpp  PlayerbotDbStore.h  PlayerbotMgr.cpp  PlayerbotTextMgr.cpp  RandomItemMgr.h  ServerFacade.cpp  aiplayerbot.conf.dist.in
src/modules/PlayerBots_backup/playerbot/strategy/: Action.cpp  Action.h  AiObject.h  AiObjectContext.h  Engine.cpp  Engine.h  ExternalEventHelper.h  Queue.cpp  Strategy.h  Trigger.h  Value.h
src/modules/PlayerBots_backup/playerbot/strategy/actions/: AcceptInvitationAction.h  ActionContext.h  AreaTriggerAction.cpp  AttackAction.cpp  BuyAction.cpp  CastCustomSpellAction.cpp  ChangeStrategyAction.h  ChangeTalentsAction.h  ChatActionContext.h  CheckMailAction.cpp  ChooseRpgTargetAction.cpp  CustomStrategyEditAction.h  DestroyItemAction.cpp  DropQuestAction.cpp  FlagAction.cpp  GenericSpellActions.cpp  GenericSpellActions.h  GoAction.cpp  GossipHelloAction.h  HelpAction.cpp  LfgActions.h  ListSpellsAction.cpp  LogLevelAction.cpp  LootAction.h  MailAction.h  (+29 more)
src/shared/: CMakeLists.txt  SystemConfig.h  revision.h.in  revision_sql.h
src/shared/BuildVersion/: BuildInfo.cpp  BuildInfo.h  example.cpp
src/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  run-worldserver  worldserver.aps  worldserver.conf.dist.in  worldserver.rc
(+79 files in other folders)
